somewhat of a fix for modules without any unqualified exports